--- a/_pages/superprimer.html
+++ b/_pages/superprimer.html
@@ -1,5 +1,5 @@
 ---
-title: "区块链超入门"
+title: "超入门"
 layout: default
 pagination:
     enabled: true
@@ -33,7 +33,7 @@ permalink: "/primer.html"
 {% endif %}
 {% endfor %}
 
-    
+
 
 
 <!-- Now the rest of the posts with the usual loop but with an offset:4 on the first page so we can skeep the first 4 posts displayed above -->
