--- a/_pages/superprimer.html
+++ b/_pages/superprimer.html
@@ -44,7 +44,7 @@ permalink: "/primer.html"
         
         <h4 class="font-weight-bold spanborder"><span>最新</span></h4>
         
-        {% for post in site.tags."超入门" %}
+        {% for post in site.tags.primer %}
 
 
             {% include main-loop-card.html %}
