--- a/_pages/superprimer.html
+++ b/_pages/superprimer.html
@@ -21,7 +21,8 @@ permalink: "/primer.html"
             <div class="col-md-6 pt-6 pb-6 pr-lg-4 align-self-center">
                 <h1 class="mb-3">{{post.title}}</h1>
                 <p class="mb-3 lead">
-                    {{ post.excerpt | strip_html | strip_newlines | truncate: 136 }}
+                    {{ post.description}}
+<!--                    {{ post.excerpt | strip_html | strip_newlines | truncate: 136 }}-->
                 </p>
                 <a href="{{site.baseurl}}{{post.url}}" class="btn btn-dark">Read More</a>
             </div>
