--- a/_pages/contracts.html
+++ b/_pages/contracts.html
@@ -1,10 +1,10 @@
 ---
-title: "区块链技术图解100"
+title: "智能合约开发指南"
 layout: default
 pagination:
     enabled: true
 description: ""
-permalink: "/block100.html"
+permalink: "/contracts.html"
 ---
 
 
