--- a/_pages/thinking.html
+++ b/_pages/thinking.html
@@ -1,10 +1,10 @@
 ---
-title: "智能合约开发指南"
+title: "区块链思维"
 layout: default
 pagination:
     enabled: true
 description: ""
-permalink: "/contracts.html"
+permalink: "/thinking.html"
 ---
 
 
