--- a/_pages/blockchain_illustrated.html
+++ b/_pages/blockchain_illustrated.html
@@ -13,7 +13,7 @@ permalink: "/block100.html"
 
 
 <!-- Sticky - add sticky tag to the post you want to highlight here - tags: [sticky] -->
-{% for post in site.posts %} 
+{% for post in site.posts | sort: 'order_number'%}
 {% if post.tags contains "sticky" %}
 <div class="jumbotron jumbotron-fluid jumbotron-home pt-0 pb-0 mt-3 mb-2rem bg-lightblue position-relative">
     <div class="pl-4 pr-0 h-100 tofront">
