--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ description: ""
     
 {% if page.url == "/" %}
 
-    {% include frontfeature.html %}
+    <!-- include frontfeature.html -->
 
 
 {% endif %} <!--endif page url is / -->
