--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ description: ""
     
 {% if page.url == "/" %}
 
-    <!-- include frontfeature.html -->
+    {% include frontfeature.html %}
 
     <!-- Sticky - add sticky tag to the post you want to highlight here - tags: [sticky] -->
     {% for post in site.posts %}
