--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ description: ""
             </div>
         </div>
     </div>
-
+    {% endif %}
 {% endif %} <!--endif page url is / -->
     
 
