--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ description: ""
                 </p>
                 <a href="{{site.baseurl}}primer.html" class="btn btn-dark">了解更多...</a>
             </div>
-            <div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url({{site.baseurl}}/assets/images/home.jpg});">
+            <div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url({{site.baseurl}}/assets/images/home.jpg);">
             </div>
         </div>
     </div>
