--- a/_pages/contracts.html
+++ b/_pages/contracts.html
@@ -43,7 +43,7 @@ permalink: "/contracts.html"
    
     <div class="col-md-8 main-loop">
         
-        <h4 class="font-weight-bold spanborder"><span>区块链技术图解100</span></h4>
+        <h4 class="font-weight-bold spanborder"><span>以太坊智能合约与Solidity开发指南</span></h4>
         
         {% for post in site.block100 %}
 
