--- a/_pages/superprimer.html
+++ b/_pages/superprimer.html
@@ -23,7 +23,7 @@ permalink: "/primer.html"
                     一本书读懂区块链。<br>
                     方军/著
                 </p>
-                <a href="{{site.baseurl}}{{post.url}}" class="btn btn-dark">了解更多...</a>
+                <!--a href="{{site.baseurl}}{{post.url}}" class="btn btn-dark">了解更多...</a-->
             </div>
             <div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url({{site.baseurl}}/assets/images/blockbook.jpg);">
             </div>
