--- a/_pages/superprimer.html
+++ b/_pages/superprimer.html
@@ -20,8 +20,7 @@ permalink: "/primer.html"
                 <h1 class="mb-3">《区块链超入门》</h1>
                 <p class="mb-3 lead">
                     区块链将带来下一代的互联网——价值互联网<br>
-                    一本书读懂区块链。<br>
-                    方军/著
+                    一本书读懂区块链。 方军/著
                 </p>
                 <!--a href="{{site.baseurl}}{{post.url}}" class="btn btn-dark">了解更多...</a-->
             </div>
