--- a/_pages/contracts.html
+++ b/_pages/contracts.html
@@ -9,33 +9,22 @@ permalink: "/contracts.html"
 
 
 <div class="container">
-    
 
-
-<!-- Sticky - add sticky tag to the post you want to highlight here - tags: [sticky] -->
-{% for post in site.posts %} 
-{% if post.tags contains "sticky" %}
 <div class="jumbotron jumbotron-fluid jumbotron-home pt-0 pb-0 mt-3 mb-2rem bg-lightblue position-relative">
     <div class="pl-4 pr-0 h-100 tofront">
         <div class="row justify-content-between">
             <div class="col-md-6 pt-6 pb-6 pr-lg-4 align-self-center">
-                <h1 class="mb-3">{{post.title}}</h1>
+                <h1 class="mb-3">精通「智能合约」</h1>
                 <p class="mb-3 lead">
-                    {{ post.description}}
-<!--                    {{ post.excerpt | strip_html | strip_newlines | truncate: 136 }}-->
+                精通以太坊与智能合约编程<br>
+                发挥区块链的技术潜力
                 </p>
-                <a href="{{site.baseurl}}{{post.url}}" class="btn btn-dark">了解更多...</a>
             </div>
-            <div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url({{site.baseurl}}/{{ post.image }});">	
+            <div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url({{site.baseurl}}/assets/images/contracttutorial.jpg);">
             </div>
         </div>
     </div>
 </div> 
-{% endif %}
-{% endfor %}
-
-
-
 
 <!-- Now the rest of the posts with the usual loop but with an offset:4 on the first page so we can skeep the first 4 posts displayed above -->
     
