--- a/_pages/superprimer.html
+++ b/_pages/superprimer.html
@@ -40,7 +40,7 @@ permalink: "/primer.html"
    
     <div class="col-md-8 main-loop">
         
-        <h4 class="font-weight-bold spanborder"><span>最新</span></h4>
+        <h4 class="font-weight-bold spanborder"><span>关于《区块链超入门》</span></h4>
         
         {% for post in site.categories.primer %}
             {% include main-loop-card.html %}
