--- a/_pages/101blockchain.html
+++ b/_pages/101blockchain.html
@@ -36,7 +36,7 @@ permalink: "/101blockchain.html"
         
         <h4 class="font-weight-bold spanborder"><span>最新教程</span></h4>
 
-        {% for post in site.categories.101blockchain %}
+        {% for post in site.101blockchain %}
         {% include main-loop-card.html %}
         {% endfor %}
         
